fix cache recent