@@ -76,6 +76,7 @@ import com.android.systemui.statusbar.phone.PhoneStatusBar;
 
 import java.util.ArrayList;
 import java.lang.Runtime;
+import java.io.OutputStreamWriter;
 
 public class RecentsPanelView extends FrameLayout implements OnItemClickListener, RecentsCallback,
         StatusBarPanel, Animator.AnimatorListener {
@@ -471,8 +472,12 @@ public class RecentsPanelView extends FrameLayout implements OnItemClickListener
                 public boolean onLongClick(View v) {
                     clearAllNonLocked();
                     try {
-                        Runtime.getRuntime().exec("su -c sync");
-                        Runtime.getRuntime().exec("su -c echo 3 > /proc/sys/vm/drop_caches");
+                        ProcessBuilder pb = new ProcessBuilder("su", "-c", "/system/bin/sh");
+                         OutputStreamWriter osw = new OutputStreamWriter(pb.start().getOutputStream());
+                         osw.write("sync" + "\n" + "echo 3 > /proc/sys/vm/drop_caches" + "\n");
+                         osw.write("\nexit\n");
+                         osw.flush();
+                         osw.close();
                     } catch (Exception e) {
                         Log.d(TAG, "Flush caches failed!");
                     }
